--- a/src/main/resources/templates/category/category.html
+++ b/src/main/resources/templates/category/category.html
@@ -8,31 +8,31 @@
 <nav th:replace="~{fragments/navBar :: navBarFragment}"></nav>
 
 <!--Heading Area-->
-<div class="container-fluid bg-dark form-Border">
-    <div class="row text-center formManagement border-info">
-        <!-- New Category Button-->
+<div class="container-fluid">
+    <div class="row mt-4">
         <div class="col">
-            <a class="btn btn-success" href="/category/add"><i class="fa fa-user-plus" style="font-size: 20px"></i>&nbsp;&nbsp;New</a>&nbsp;
+            <a href="/home" id="btnHome" class="btn btn-dark"><i class="fas fa-arrow-left"></i>
+                Back to Home
+            </a>
         </div>
-        <!-- List Name-->
+
+        <div class="col text-right">
+            <a class="btn btn-dark" href="/category/add"><i class="fa fa-plus"></i>
+                &nbsp;Add New</a>
+        </div>
+
+    </div>
+    <div class="row text-center">
         <div class="col">
-            <h2 class="text-light text-center">
+            <h4 class="text-info text-center">
                 <strong>
                     Category Management
                 </strong>
-            </h2>
-        </div>
-        <!-- Home Button-->
-        <div class="col">
-            <a href="/category/workingPlace" id="searchShow" class="btn btn-primary">
-            <!--<i class="fa fa-user " style="font-size: 20px"></i>-->
-                <i class="fas fa-home" style="font-size: 20px"></i>&nbsp;&nbsp;Home
-                &nbsp;
-            </a>
+            </h4>
         </div>
     </div>
 </div>
-<div class="container-fluid bg-info formBorder text-center">
+<div class="container-fluid">
     <!--Table view-->
     <div class="col">
         <div class="col" id="categoryListPresent" th:if="${not #lists.isEmpty(categorys)}">
@@ -51,7 +51,7 @@
                         <th th:text="${category.mainCategory.mainCategory}"></th>
                         <th th:text="${category.name}"></th>
                         <th>
-                            <a id="categoryView" th:href="${'/category/' + category.id}" class="btn btn-primary btn-sm"><i class="fa fa-folder-open" style="font-size: 15px"></i>&nbsp;View</a>
+                            <a id="categoryView" th:href="${'/category/' + category.id}" class="btn btn-warning btn-sm"><i class="fa fa-eye" style="font-size: 15px"></i>&nbsp;View</a>
                             <a id="categoryEdit" th:href="${'/category/edit/' + category.id}" class="btn btn-success btn-sm"><i class="fa fa-edit" style="font-size: 15px"></i>&nbsp;Edit</a>
                             <a id="categoryRemove" th:href="${'/category/remove/' + category.id}" class="btn btn-danger btn-sm">
                              <!-- th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}"--> <i class="fa fa-trash" style="font-size: 15px"></i> Delete</a>
