--- a/src/main/resources/templates/customer/customer-detail.html
+++ b/src/main/resources/templates/customer/customer-detail.html
@@ -8,11 +8,11 @@
 <nav th:replace="~{fragments/navBar :: navBarFragment}"></nav>
 
 <!--heading Area-->
-<div class="container-fluid bg-dark form-Border">
+<div class="container-fluid">
     <div class="row text-center formManagement border-info">
         <!--ViewList Button-->
         <div class="col">
-            <a href="/customer" class="btn btn-primary" tabindex="1">
+            <a href="/customer" class="btn btn-dark" tabindex="1">
                 <i class="fa fa-list" style="font-size: 20px"></i>&nbsp;&nbsp;View List
             </a>
         </div>
@@ -20,20 +20,20 @@
         <div class="col">
             <h2 class="text-light text-center">
                 <strong>
-                    <p th:text="${customerDetail.title.title} +${' '} +${customerDetail.name}"></p>
+                    <p style="font-size: 30px; color: #1d2124" th:text="${customerDetail.title.title} +${' '} +${customerDetail.name}"></p>
                 </strong>
             </h2>
         </div>
         <!--Home Button-->
         <div class="col">
-            <a class="btn btn-primary" href="/home" tabindex="2">
+            <a class="btn btn-dark" href="/home" tabindex="2">
                 <i class="fa fa-home" style="font-size: 20px"></i> &nbsp;&nbsp;Home
             </a>
         </div>
     </div>
 </div>
 <!--details-->
-<div th:fragment="customerDetailsFragment" class="container-fluid ">
+<div th:fragment="customerDetailsFragment" class="container-fluid form-Border" style="padding: 30px; width: 90%;">
 
     <div class="col-sm-12 flex-column ">
         <div class="row">
@@ -146,6 +146,7 @@
         </div>
     </div>
 </div>
+<br>
 <!--Back Button-->
 <div class="form-group col-md-12 col-sm-12 text-center flex-column ">
     <a href="/customer">
