--- a/src/main/resources/templates/brand/addBrand.html
+++ b/src/main/resources/templates/brand/addBrand.html
@@ -19,7 +19,7 @@
         <div class="col">
             <h2 class="text-light text-center">
                 <strong>
-                    <span th:text="${addStatus==true?'Add New Brand':'Update Brand Details'}"></span>
+                    <span  data-th-text="${addStatus==true?'Add New Brand':'Update Brand Details'}"></span>
                 </strong>
             </h2>
         </div>
@@ -45,7 +45,7 @@
                             <label class="control-label" for="id">ID :</label>
                         </div>
                         <div class="col-md-8">
-                            <input id="id" th:field="*{id}" class="form-control" type="text" readonly/>
+                            <input id="id"  data-th-field="*{id}" class="form-control" type="text" readonly/>
                         </div>
                     </div>
                     <!--Name-->
@@ -54,7 +54,7 @@
                             <label class="control-label" for="name">Name :</label>
                         </div>
                         <div class="col-md-8">
-                            <input id="name" th:field="*{name}" class="form-control" tabindex="4" type="text" required/>
+                            <input id="name"  data-th-field="*{name}" class="form-control" tabindex="4" type="text" required/>
                             <span id="nameError" th:errors="*{name}"
                                   th:if="${#fields.hasErrors('name')}" class="error">Error Name</span>
                         </div>
@@ -71,7 +71,7 @@
                                 <label class="control-label" for="createdBy">Created By :</label>
                             </div>
                             <div class="col-md-8">
-                                <input id="createdBy" th:field="*{createdBy}" class="form-control" type="text" readonly/>
+                                <input id="createdBy"  data-th-field="*{createdBy}" class="form-control" type="text" readonly/>
                             </div>
                         </div>
                         <!--Created At-->
@@ -80,7 +80,7 @@
                                 <label class="control-label" for="createdAt">Created At :</label>
                             </div>
                             <div class="col-md-8">
-                                <input id="createdAt" th:field="*{createdAt}" class="form-control" type="text" readonly/>
+                                <input id="createdAt"  data-th-field="*{createdAt}" class="form-control" type="text" readonly/>
                             </div>
                         </div>
                     </div>
@@ -93,7 +93,7 @@
                     </a>
                     <!--Save Button-->
                     <button class="btn btn-success ml-5" type="submit" tabindex="9">
-                        <i class="fa fa-save " style="font-size: 20px"></i>&nbsp;&nbsp;<span id="submit" th:text="${addStatus==true?'Save': 'Update'}"></span>
+                        <i class="fa fa-save " style="font-size: 20px"></i>&nbsp;&nbsp;<span id="submit"  data-th-text="${addStatus==true?'Save': 'Update'}"></span>
                     </button>
                     <!--Cancel Button-->
                     <button class="btn btn-warning ml-5" type="reset" tabindex="10">
@@ -104,7 +104,7 @@
                 <div class="form-row">
                     <label id="errorLabel" th:if="${#fields.hasErrors('*')}" th:text="'Errors: '">Errors: </label>
                     <ul>
-                        <li id="error" th:each="err: ${#fields.errors('*')}" th:text="${err}" class="error"></li>
+                        <li id="error"  data-th-each="err: ${#fields.errors('*')}"  data-th-text="${err}" class="error"></li>
                     </ul>
                 </div>
             </div>
