--- a/src/main/resources/templates/item/item.html
+++ b/src/main/resources/templates/item/item.html
@@ -48,12 +48,12 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr  data-th-each="item, rowCount : ${items}">
-                    <th  data-th-text="${rowCount.count}"></th>
-                    <th  data-th-text="${item.category.mainCategory.mainCategory}"></th>
-                    <th  data-th-text="${item.category.name}"></th>
-                    <th  data-th-text="${item.name}"></th>
-                    <th  data-th-text="${item.rop}"></th>
+                <tr th:each="item, rowCount : ${items}">
+                    <th th:text="${rowCount.count}"></th>
+                    <th th:text="${item.category.mainCategory.mainCategory}"></th>
+                    <th th:text="${item.category.name}"></th>
+                    <th th:text="${item.name}"></th>
+                    <th th:text="${item.rop}"></th>
                     <th>
                         <a class="btn btn-primary btn-sm" th:href="${'/item/' + item.id}"><i class="fa fa-folder-open"
                                                                                              style="font-size: 15px"></i>&nbsp;View</a>
