--- a/src/main/resources/templates/category/category.html
+++ b/src/main/resources/templates/category/category.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head  data-th-replace="~{fragments/header :: headerFragment}">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{fragments/header :: headerFragment}">
     <meta charset="UTF-8">
     <title>category</title>
 </head>
 <body>
-<nav  data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
+<nav th:replace="~{fragments/navBar :: navBarFragment}"></nav>
 
 <!--Heading Area-->
-<div class="container-fluid ">
-    <div class="row text-center formManagement border-info">
-        <!-- New Category Button-->
+<div class="container-fluid">
+    <div class="row mt-4">
         <div class="col">
-            <a class="btn btn-success" href="/category/add"><i class="fa fa-user-plus" style="font-size: 20px"></i>&nbsp;&nbsp;New</a>&nbsp;
+            <a href="/home" id="btnHome" class="btn btn-dark"><i class="fas fa-arrow-left"></i>
+                Back to Home
+            </a>
         </div>
-        <!-- List Name-->
+
+        <div class="col text-right">
+            <a class="btn btn-dark" href="/category/add"><i class="fa fa-plus"></i>
+                &nbsp;Add New</a>
+        </div>
+
+    </div>
+    <div class="row text-center">
         <div class="col">
-            <h2 class="text-light text-center">
+            <h4 class="text-info text-center">
                 <strong>
                     Category Management
                 </strong>
-            </h2>
-        </div>
-        <!-- Home Button-->
-        <div class="col">
-            <a href="/category/workingPlace" id="searchShow" class="btn btn-primary">
-            <!--<i class="fa fa-user " style="font-size: 20px"></i>-->
-                <i class="fas fa-home" style="font-size: 20px"></i>&nbsp;&nbsp;Home
-                &nbsp;
-            </a>
+            </h4>
         </div>
     </div>
 </div>
-<div class="container-fluid bg-info formBorder text-center">
+<div class="container-fluid">
     <!--Table view-->
     <div class="col">
-        <div class="col" id="categoryListPresent"  data-th-if="${not #lists.isEmpty(categorys)}">
+        <div class="col" id="categoryListPresent" th:if="${not #lists.isEmpty(categorys)}">
             <table class="table table-hover table-striped" id="myTable">
                 <thead>
                     <tr>
@@ -46,15 +46,15 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr  data-th-each="category, rowCount : ${categorys}">
-                        <th  data-th-text="${rowCount.count}"></th>
-                        <th  data-th-text="${category.mainCategory.mainCategory}"></th>
-                        <th  data-th-text="${category.name}"></th>
+                    <tr th:each="category, rowCount : ${categorys}">
+                        <th th:text="${rowCount.count}"></th>
+                        <th th:text="${category.mainCategory.mainCategory}"></th>
+                        <th th:text="${category.name}"></th>
                         <th>
-                            <a id="categoryView"  data-th-href="${'/category/' + category.id}" class="btn btn-primary btn-sm"><i class="fa fa-folder-open" style="font-size: 15px"></i>&nbsp;View</a>
-                            <a id="categoryEdit"  data-th-href="${'/category/edit/' + category.id}" class="btn btn-success btn-sm"><i class="fa fa-edit" style="font-size: 15px"></i>&nbsp;Edit</a>
-                            <a id="categoryRemove"  data-th-href="${'/category/remove/' + category.id}" class="btn btn-danger btn-sm">
-                             <!--  data-th-if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}"--> <i class="fa fa-trash" style="font-size: 15px"></i> Delete</a>
+                            <a id="categoryView" th:href="${'/category/' + category.id}" class="btn btn-warning btn-sm"><i class="fa fa-eye" style="font-size: 15px"></i>&nbsp;View</a>
+                            <a id="categoryEdit" th:href="${'/category/edit/' + category.id}" class="btn btn-success btn-sm"><i class="fa fa-edit" style="font-size: 15px"></i>&nbsp;Edit</a>
+                            <a id="categoryRemove" th:href="${'/category/remove/' + category.id}" class="btn btn-danger btn-sm">
+                             <!-- th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}"--> <i class="fa fa-trash" style="font-size: 15px"></i> Delete</a>
                         </th>
                     </tr>
                 </tbody>
@@ -62,7 +62,7 @@
         </div>
     </div>
     <!--Error-->
-    <div class="row"  data-th-if="${ #lists.isEmpty(categorys)}">
+    <div class="row" th:if="${ #lists.isEmpty(categorys)}">
         <div class="col-sm-12">
             <div class="alert alert-warning alert-dismissible fade show" role="alert">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -80,9 +80,10 @@
         </script>
     </div>
 </div>
-<div   data-th-replace="~{fragments/footer :: footerFragment}"></div>
+<!--footer include-->
+<footer th:replace="~{fragments/footer :: footerFragment}"></footer>
 <!--script include-->
-<script  data-th-replace="~{fragments/script :: scriptFragment}"></script>
+<script th:replace="~{fragments/script :: scriptFragment}"></script>
 
 </body>
 </html>
