--- a/src/main/resources/templates/customer/customer.html
+++ b/src/main/resources/templates/customer/customer.html
@@ -1,42 +1,45 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head  data-th-replace="~{fragments/header :: headerFragment}">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{fragments/header :: headerFragment}">
     <meta charset="UTF-8">
     <title>customer</title>
 </head>
 <body>
-<nav  data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
+<nav th:replace="~{fragments/navBar :: navBarFragment}"></nav>
+
+
 <!--heading Area-->
-<div class="container-fluid  form-Border">
-    <div class="row text-center formManagement border-info">
-        <!--New Customer Button-->
+<div class="container-fluid">
+    <div class="row mt-4">
         <div class="col">
-            <a class="btn btn-success" href="/customer/add" tabindex="1">
-                <i class="fas fa-plus" style="font-size: 20px"></i>&nbsp;&nbsp;New
+            <a href="/home" id="btnHome" class="btn btn-dark"><i class="fas fa-arrow-left"></i>
+                Back to Home
             </a>
         </div>
-        <!--List Name-->
+
+        <div class="col text-right">
+            <a class="btn btn-dark" href="/customer/add"><i class="fa fa-plus"></i>
+                &nbsp;Add New</a>
+        </div>
+
+    </div>
+    <div class="row text-center">
         <div class="col">
-            <h2 class="text-white text-center">
+            <h4 class="text-info text-center">
                 <strong>
-                    Customer List
+                    Customer Management
                 </strong>
-            </h2>
-        </div>
-        <!--Home Button-->
-        <div class="col">
-            <a href="/home" id="searchShow" class="btn btn-primary" tabindex="2">
-                <!--<i class="fa fa-user " style="font-size: 20px"></i>&nbsp;Add&nbsp;-->
-                <i class="fas fa-home" style="font-size: 20px"></i>&nbsp;&nbsp;Home
-            </a>
+            </h4>
         </div>
     </div>
 </div>
+
+
 <!--Customers List-->
-<div class="container-fluid bg-primary text-center">
+<div class="container-fluid ">
     <!--Table view-->
     <div class="col">
-        <div class="col" id="customerListPresent"  data-th-if="${not #lists.isEmpty(customers)}">
+        <div class="col" id="customerListPresent" th:if="${not #lists.isEmpty(customers)}">
             <table class="table table-hover table-striped" id="myTable">
                 <thead>
                 <tr>
@@ -49,22 +52,23 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr  data-th-each="customer, rowCount : ${customers}">
-                    <th  data-th-text="${rowCount.count}"></th>
-                    <th  data-th-text="${customer.title}+${'. '}+${customer.name}"></th>
-                    <th  data-th-text="${customer.code}"></th>
-                    <th  data-th-text="${customer.mobile}"></th>
-                    <th  data-th-text="${customer.address}"></th>
+                <tr th:each="customer, rowCount : ${customers}">
+                    <th th:text="${rowCount.count}"></th>
+                    <th th:text="${customer.title}+${'. '}+${customer.name}"></th>
+                    <th th:text="${customer.code}"></th>
+                    <th th:text="${customer.mobile}"></th>
+                    <th th:text="${customer.address}"></th>
                     <th>
-                        <a id="customerView"  data-th-href="${'/customer/' + customer.id}" class="btn btn-primary btn-sm"><i
-                                class="fa fa-folder-open" style="font-size: 15px"></i>&nbsp;View</a>
-                        <a id="customerEdit"  data-th-href="${'/customer/edit/' + customer.id}"
+                        <a id="customerView" th:href="${'/customer/' + customer.id}" class="btn btn-warning btn-sm"><i
+                                class="fa fa-eye" style="font-size: 15px"></i>&nbsp;View</a>
+                        <a id="customerEdit" th:href="${'/customer/edit/' + customer.id}"
                            class="btn btn-success btn-sm"><i class="fa fa-edit"
                                                              style="font-size: 15px"></i>&nbsp;Edit</a>
-                        <a id="customerRemove"  data-th-if="${!#authorization.expression('hasRole(''ROLE_CASHIER'')')}" data-th-href="${'/customer/delete/' + customer.id}"
+                        <a id="customerRemove" th:href="${'/customer/delete/' + customer.id}"
                            class="btn btn-danger btn-sm">
-                            <!-- data-th-if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" -->
-                            <i class="fa fa-trash" style="font-size: 15px"></i> Delete </a>
+                            <!--th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" --> <i
+                                class="fa fa-trash" style="font-size: 15px"></i>
+                            Delete</a>
                     </th>
                 </tr>
                 </tbody>
@@ -72,7 +76,7 @@
         </div>
     </div>
     <!--Error-->
-    <div class="row"  data-th-if="${ #lists.isEmpty(customers)}">
+    <div class="row" th:if="${ #lists.isEmpty(customers)}">
         <div class="col-sm-12">
             <div class="alert alert-warning alert-dismissible fade show" role="alert">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -92,14 +96,14 @@
         </script>
     </div>
     <!--Save customer-->
-    <div class="row"  data-th-if="${customerDetail != null}">
+    <div class="row" th:if="${customerDetail != null}">
         <div class="col-sm-12">
-            <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <div class="alert alert-dismissible fade show" role="alert" id="alertBox">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close" style="color: red">
                     <span aria-hidden="true">&times;</span>
                 </button>
                 <!--save customer include-->
-                <div  data-th-replace="~{customer/customer-detail :: customerDetailsFragment}"></div>
+                <div th:replace="~{customer/customer-detail :: customerDetailsFragment}"></div>
             </div>
         </div>
         <script>
@@ -109,9 +113,10 @@
         </script>
     </div>
 </div>
-<div   data-th-replace="~{fragments/footer :: footerFragment}"></div>
+<!--footer include-->
+<footer th:replace="~{fragments/footer :: footerFragment}"></footer>
 <!--script include-->
-<script  data-th-replace="~{fragments/script :: scriptFragment}"></script>
+<script th:replace="~{fragments/script :: scriptFragment}"></script>
 
 </body>
 </html>
