--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -1,47 +1,50 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head  data-th-replace="~{fragments/header :: headerFragment}">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{fragments/header :: headerFragment}">
     <meta charset="UTF-8">
     <title>Thymeleaf Springboot </title>
 </head>
 <body>
-<nav  data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
+<!--<nav th:replace="~{fragments/navBar :: navBarFragment}"></nav>-->
+<div th:replace="~{fragments/navBar :: navBarFragment}"></div>
+
+
 
 <!--heading Area-->
-<div class="container-fluid ">
-    <div class="row text-center formManagement ">
+<div class="container-fluid">
+    <div class="row mt-4">
         <div class="col">
-            <a href="/home" id="btnHome" class="btn btn-success">
-                &nbsp;Back To Home&nbsp;
+            <a href="/home" id="btnHome" class="btn btn-dark"><i class="fas fa-arrow-left"></i>
+                Back to Home
             </a>
         </div>
 
-        <div class="col">
-            <a class="btn btn-success" href="/employee/add"><i class="fa fa-plus"></i>
+        <div class="col text-right">
+            <a class="btn btn-dark" href="/employee/add"><i class="fa fa-plus"></i>
                 &nbsp;Add New</a>
         </div>
 
     </div>
     <div class="row text-center">
         <div class="col">
-            <h2 class="text-light text-center">
+            <h4 class="text-info text-center">
                 <strong>
                     Employee Management
                 </strong>
-            </h2>
+            </h4>
         </div>
     </div>
 </div>
-<div class="container-fluid formBorder text-center">
+<div class="container-fluid">
     <div class="col">
-        <div class="col" id="employeeListPresent"  data-th-if="${not #lists.isEmpty(employees)}">
-            <table class="table table-hover table-striped" id="myTable">
+        <div class="col" id="employeeListPresent" th:if="${not #lists.isEmpty(employees)}">
+            <table class="table table-hover" id="myTable">
                 <thead>
-                <tr>
+                <tr >
                     <th> Index</th>
                     <th> Image</th>
                     <th> Employee Id</th>
-                    <th> Calling Name</th>
+                    <th> Name</th>
                     <th> Mobile</th>
                     <th> Designation</th>
                     <th> Status</th>
@@ -49,8 +52,8 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr  data-th-each="employee, rowCount : ${employees}">
-                    <th  data-th-text="${rowCount.count}"></th>
+                <tr th:each="employee, rowCount : ${employees}">
+                    <th th:text="${rowCount.count}"></th>
                     <th>
                         <div class="image" data-th-if="${employee.fileInfo !=null}" >
                             <img id="img" class="rounded"
@@ -59,16 +62,15 @@
                                  data-th-src="${employee.fileInfo.url}" />
                         </div >
                     </th>
-                    <th  data-th-text="${employee.code}"></th>
-                    <th  data-th-text="${employee.callingName}"></th>
-                    <th  data-th-text="${employee.mobileOne}"></th>
-                    <th  data-th-text="${employee.designation.designation}"></th>
-                    <th  data-th-text="${employee.employeeStatus.employeeStatus}"></th>
+                    <th th:text="${employee.code}"></th>
+                    <th th:text="${employee.callingName}"></th>
+                    <th th:text="${employee.mobileOne}"></th>
+                    <th th:text="${employee.designation.designation}"></th>
+                    <th th:text="${employee.employeeStatus.employeeStatus}"></th>
                     <th>
-                        <a id="employeeView"  data-th-href="${'/employee/' + employee.id}" class="btn btn-outline-secondary btn-sm">&nbsp;View</a>
-                        <a id="employeeEdit"  data-th-href="${'/employee/edit/' + employee.id}" class="btn btn-primary btn-sm"><i class="fa fa-edit"></i>&nbsp;Edit</a>
-                        <a id="employeeRemove"  data-th-href="${'/employee/remove/' + employee.id}"
-                            data-th-if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i>
+                        <a id="employeeView" th:href="${'/employee/' + employee.id}" class="btn btn-success btn-sm">&nbsp;View</a>
+                        <a id="employeeEdit" th:href="${'/employee/edit/' + employee.id}" class="btn btn-info btn-sm"><i class="fa fa-edit"></i>&nbsp;Edit</a>
+                        <a id="employeeRemove" th:href="${'/employee/remove/' + employee.id}" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i>
                             Delete</a>
                     </th>
                 </tr>
@@ -76,7 +78,7 @@
             </table>
         </div>
     </div>
-    <div class="row"  data-th-if="${ #lists.isEmpty(employees)}">
+    <div class="row" th:if="${ #lists.isEmpty(employees)}">
         <div class="col-sm-12">
             <div class="alert alert-warning alert-dismissible fade show" role="alert">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -96,9 +98,10 @@
         </script>
     </div>
 </div>
-<div   data-th-replace="~{fragments/footer :: footerFragment}"></div>
+<!--footer include-->
+<footer th:replace="~{fragments/footer :: footerFragment}"></footer>
 <!--script include-->
-<script  data-th-replace="~{fragments/script :: scriptFragment}"></script>
+<script th:replace="~{fragments/script :: scriptFragment}"></script>
 
 </body>
 </html>
