--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -7,7 +7,7 @@
                 <strong>
                     <i>
                         <a href="#" target="_blank">
-                            &copy; &nbsp;<span id="currentYear"></span> &nbsp; ARO Computer
+                         <p>Copyright © 2018 Colorlib. All rights reserved. Template by <a href="https://colorlib.com">Colorlib</a>.</p>
                         </a>
                     </i>
                 </strong>
