--- a/src/main/resources/templates/fragments/script.html
+++ b/src/main/resources/templates/fragments/script.html
@@ -23,6 +23,9 @@
     <!--custom javascript-->
     <script  data-th-src="@{/js/myJs.js}"></script>
 
+    <!--progress bar-->
+    <script  data-th-src="@{/js/sweetalert.js}"></script>
+
     <!--notification count get url-->
     <!--  <script>
           $(document).ready(function () {
