--- a/src/main/resources/templates/item/addItem.html
+++ b/src/main/resources/templates/item/addItem.html
@@ -98,7 +98,7 @@
                 <!--Item Color -->
                 <div class="form-row text-right" >
                   <div class="col-md-4" >
-                    <label class="control-label" for="itemColor" >Brand :</label >
+                    <label class="control-label" for="itemColor" >Item Color :</label >
                   </div >
                   <div class="col-md-4" >
                     <select id="itemColor" data-th-field="*{itemColor}" class="form-control" tabindex="4" style="font-size: large"
