--- a/src/main/resources/templates/employee/addEmployee.html
+++ b/src/main/resources/templates/employee/addEmployee.html
@@ -384,7 +384,15 @@
                 $('#image').attr('src', e.target.result);
             }
 
-            reader.readAsDataURL(input.files[0]); // convert to base64 string
+          if (input.files[0].size < 10485760) {
+            reader.readAsDataURL(input.files[0]);
+          } else {
+            swal({
+              title: "Select file size was too large select less than 1MB file",
+              icon: "warning",
+            });
+          }
+
         }
     }
 
