--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en"  >
 <head  data-th-fragment="headerFragment">
-    <title  data-th-if="${headerTitle==null}"  data-th-text="${'ARO Computers'}">Spring boot - Thymeleaf</title>
+    <title  data-th-if="${headerTitle==null}"  data-th-text="${'Sanchana Bag Shop'}">Spring boot - Thymeleaf</title>
     <title  data-th-if="${headerTitle!=null}"  data-th-text="${headerTitle}">Spring boot - Thymeleaf</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -22,8 +22,24 @@
     <link  data-th-href="@{/css/image-uploader.min.css}" media="all" rel="stylesheet" type="text/css"/>
     <!--my css-->
     <link  data-th-href="@{/css/myCss.css}" media="all" rel="stylesheet" type="text/css"/>
+
+<!--    &lt;!&ndash;login css&ndash;&gt;-->
+<!--    <link  data-th-href="@{/css/login.css}" media="all" rel="stylesheet" type="text/css"/>-->
+
+    <!--mainwindow css-->
+    <link  data-th-href="@{/css/theme.css}" media="all" rel="stylesheet" type="text/css"/>
+
     <!--Floating Label-->
     <link  data-th-href="@{/css/floating-labels.css}" media="all" rel="stylesheet" type="text/css"/>
+
+    <!--selec2 css-->
+    <link  data-th-href="@{/css/select2.css}" media="all" rel="stylesheet" type="text/css"/>
+
+    <!--slick css-->
+    <link  data-th-href="@{/css/slick.css}" media="all" rel="stylesheet" type="text/css"/>
+
+    <!--ham css-->
+    <link  data-th-href="@{/css/css-hamburgers.css}" media="all" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 
