--- a/src/main/resources/templates/item/item.html
+++ b/src/main/resources/templates/item/item.html
@@ -53,7 +53,7 @@
                         <th  data-th-text="${rowCount.count}"></th>
                         <th  data-th-text="${item.category.mainCategory.mainCategory}"></th>
                         <th  data-th-text="${item.category.name}"></th>
-                        <th  data-th-text="${item.name}"></th>
+<!--                        <th  data-th-text="${item.name}"></th>-->
                         <th  data-th-text="${item.rop}"></th>
                         <th>
                             <a data-th-href="${'/item/' + item.id}" class="btn btn-primary btn-sm"><i class="fa fa-folder-open" style="font-size: 15px"></i>&nbsp;View</a>
