--- a/src/main/resources/templates/fragments/navBar.html
+++ b/src/main/resources/templates/fragments/navBar.html
@@ -5,10 +5,10 @@
 </head >
 
 <body >
-<nav class="navbar navbar-expand-sm navbar-dark " data-th-fragment="navBarFragment" >
+<nav class="navbar navbar-expand-sm navbar-dark " data-th-fragment="navBarFragment" style="background-image: linear-gradient(to right, rgb(255,255,255), rgb(245,245,245), rgb(211,211,211), rgb(245,245,245)); height: 80px">
 
   <a class="navbar-brand" href="#" >
-    <img data-th-src="${'../img/logo.png'}" alt="Company log" style="width:50px;height:50px;" id="logo"
+    <img data-th-src="${'../img/1.PNG'}" alt="Company log" style="width:200px;height:80px;float: left;" id="logo"
          class="animated-spin" >
   </a >
   <a class="navbar-brand" data-th-href="${'/home'}" ><i class="fa fa-home" style="font-size: 18px" ></i ></a >
