--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -54,9 +54,7 @@
                                     class="fa fa-edit"></i>&nbsp;Edit</a>
                             <a class="btn btn-danger btn-sm" id="userRemove"  data-th-href="${'/user/remove/' + user.id}"
                                 data-th-if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}"
-                            ><i
-                                    aria-hidden="true" class="fa fa-trash"></i>
-                                Delete</a>
+                            ><i aria-hidden="true" class="fa fa-trash"></i>Delete</a>
                         </th>
                     </tr>
                     </tbody>
